web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export/output.txt
[SyntaxError]: Identifier has already been declared. (2,17)
2|export { bar as foo };
 |               ^
[SyntaxError]: Export variable is not defined. (1,10)
1|export { foo };
 |        ^
[SyntaxError]: Export variable is not defined. (2,10)
2|export { bar as foo };
 |        ^
